game now only starts if matrix is visible on screen, bugfixes

--- a/snakeStyle.css
+++ b/snakeStyle.css
@@ -12,7 +12,7 @@
 }
 
 #snakeOverlay:hover {
-    background-color: rgba(84,84,84, 0.6);
+    background-color: rgba(84,84,84, 0.5);
     cursor: pointer;
     transition: background-color 0.4s;
 }
